small changes made